# dustbox-rs

./: .gitignore  .travis.yml  32b.txt  Cargo.toml  LICENSE  Makefile  README.md  TODO.md  demo256.html  index.html
benches/: cpu.rs
debugger/: Cargo.toml  README.md
debugger/src/: breakpoints.rs  breakpoints_test.rs  debugger.rs  debugger_test.rs  interface.glade  interface.rs  lib.rs  memory_breakpoints.rs
disasm/: Cargo.toml
disassembler/: Cargo.toml  README.md  TODO.md
disassembler/src/: disassembler-main.rs  tracer.rs  tracer_test.rs
docs/: demo256.html  demo_16k.html  demo_256.html  demo_256_32bit.html  demo_512.html  demo_512_32bit.html  demo_com_16bit.html  demo_com_32bit.html  games_com.html  index.html
docs/templates/: demo256.html  test_category.tpl.html
dumpcs/: dumpcs.com
dustbox/: Cargo.toml  build.rs
dustbox/benches/: cpu.rs
dustbox/src/: bios.rs  cmos.rs  hex.rs  keyboard.rs  keyboard_test.rs  lib.rs  machine.rs  machine_test.rs  mouse.rs  ndisasm.rs  pic.rs  pit.rs  pit_test.rs  string.rs  string_test.rs  tools.rs
dustbox/src/codepage/: cp437.rs  mod.rs
dustbox/src/cpu/: decoder.rs  decoder_test.rs  encoder.rs  encoder_test.rs  flag.rs  instruction.rs  mod.rs  op.rs  parameter.rs  register.rs  register_test.rs  segment.rs
dustbox/src/debug/: breakpoints_test.rs  debugger.rs  memory_breakpoints.rs  memory_breakpoints_test.rs  mod.rs  tracer.rs  tracer_test.rs
dustbox/src/dos/: dos.rs  mod.rs
dustbox/src/format/: exe.rs  mod.rs
dustbox/src/gpu/: crtc.rs  dac.rs  font.rs  mod.rs  modes.rs  modes_test.rs  palette.rs  render.rs  render_test.rs
dustbox/src/interrupt/: int21.rs  mod.rs
dustbox/src/memory/: flat_memory.rs  memory_address.rs  mmu.rs  mmu_test.rs
exeinfo/: Cargo.toml  README.md
exeinfo/src/: exeinfo-main.rs
frontend/: Cargo.toml  README.md
frontend/src/: frontend-main.rs
fuzzer/: Cargo.toml  README.md
fuzzer/src/: README.md  fuzzer.rs  fuzzer_test.rs  lib.rs
harness/: Cargo.toml  README.md
harness/sets/: demo-com-16bit.yml  demo-com-32bit.yml  games-com-commercial-16bit.yml
prober/: .gitignore  Makefile  README.md  data.inc.asm  prober.asm  regs.inc.asm
realtest/: .gitignore  Makefile  a.out  ex1.asm  ex1.com  main.c  test.c
samples/: dosbox.conf
samples/adrmode/: Makefile  adrmode.asm  adrmode.com
samples/bar/: Makefile  bar.asm  bar.com
samples/hello/: Makefile  hello.asm  hello.com
samples/hellodos/: hello.asm
samples/hex/: Makefile  hex.asm
samples/vga256/: Makefile  vga256.asm  vga256.com
samples/vgafill/: Makefile  vgafill.asm  vgafill.com
src/: bios.rs  breakpoints.rs  cmos.rs  cp437.rs  cpu.rs  cpu_test.rs  debugger.rs  debugger_test.rs  decoder.rs  disk.rs  flags.rs  flags_test.rs  gfx_test.rs  gpu.rs  gpu_test.rs  gui.glade  gui.rs  hardware.rs  instruction.rs  int10.rs  int16.rs  int1a.rs  int21.rs  int33.rs  interface.glade  interface.rs  keyboard.rs  keyboard_test.rs  lib.rs  machine.rs  machine_test.rs  main.rs  memory.rs  memory_breakpoints.rs  mmu.rs  mouse.rs  ndisasm.rs  opcodes.rs  pic.rs  pic_test.rs  (+11 more)
src/codepage/: cp437.rs
src/cpu/: cpu.rs  cpu_test.rs  decoder.rs  decoder_test.rs  encoder.rs  encoder_test.rs  flag.rs  flag_test.rs  flags.rs  flags_test.rs  fuzzer.rs  fuzzer_test.rs  instruction.rs  interpreter.rs  interpreter_test.rs  io.rs  mod.rs  op.rs  parameter.rs  register.rs  register_test.rs  segment.rs  tracer.rs  tracer_test.rs
src/debug/: breakpoints_test.rs  debugger.rs  debugger_test.rs  memory_breakpoints.rs  tracer.rs  tracer_test.rs
src/disasm/: mod.rs
src/gpu/: crtc.rs  dac.rs  font.rs  gpu.rs  gpu_test.rs  graphic_card.rs  mod.rs  modes.rs  palette.rs  render.rs  render_test.rs  video_parameters.rs
src/interrupt/: int10.rs  int13.rs  int16.rs  int1a.rs  int21.rs  int33.rs  mod.rs
src/memory/: flat_memory.rs  memory.rs  memory_address.rs  mmu.rs  mmu_test.rs  mod.rs
src/pit/: mod.rs
tests/: cpu_test.rs  disasm_test.rs
utils/char/: Makefile  char.asm  char.com
utils/dos-memory/: Makefile  memory.asm  memory.com
utils/dos-mouse/: Makefile  README.md  mouse.asm  mouse.com
utils/dos-readfile/: Makefile  README.md  readfile.asm  readfile.com
utils/dumpcs/: Makefile  README.md  dumpcs.asm
utils/palette/: Makefile  README.md  palette.asm  palette.com
utils/pixel/: Makefile  pixel.asm  pixel.com
utils/prober/: .gitignore  Makefile  README.md  data.inc.asm  print.inc.asm  prober.asm  prober.tpl.asm  regs.inc.asm
utils/realtest/: Makefile  cc.c  test.c
utils/scroll/: Makefile  scroll.asm  scroll.com
