[package]
name = "dustbox"
version = "0.1.0"
authors = [
    "Martin Lindhe <martin.j.lindhe@gmail.com>"
]

[lib]
path = "src/lib.rs"

[dependencies]
bincode = "1.0"
chrono = "0.4"
image = "0.20"
sdl2 = "0.31"
quick-error = "1.2"
rand = "0.5"
serde = "1.0"
serde_derive = "1.0"
simple-error = "0.1"
tempdir = "0.3"
tera = "0.11"
toml = "0.4"

[dev-dependencies]
criterion = "0.2"
pretty_assertions = "0.5"

[[bench]]
name = "cpu"
harness = false

[workspace]
members = [ "disassembler", "debugger", "frontend", "fuzzer" ]
