[package]
name = "dustbox"
version = "0.1.0"
authors = [
    "Martin Lindhe <martin@ubique.se>"
]
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
bincode = "1.1"
chrono = "0.4"
image = "0.21"
sdl2 = "0.32"
quick-error = "1.2"
rand = "0.6"
rand_xorshift = "0.1"
serde = "1.0"
serde_derive = "1.0"
simple-error = "0.2"
tempdir = "0.3"
tera = "0.11"
toml = "0.5"

[dev-dependencies]
criterion = "0.2"
pretty_assertions = "0.6"

[[bench]]
name = "cpu"
harness = false

[workspace]
members = [ "disassembler", "debugger", "frontend", "fuzzer" ]
