[package]
name = "debugger"
version = "0.1.0"
authors = ["Martin Lindhe"]
edition = "2018"

[lib]
path = "src/lib.rs"
doctest = false

[[bin]]
name = "dustbox-debugger"
path = "src/bin/debugger-main.rs"
test = false

[dependencies]
cairo-rs = "0.14"
clap = "2.33"
dustbox = { path = "../dustbox" }
gdk = "0.14"
gdk-pixbuf = "0.14"
gtk = "0.14"
