[package]
name = "dustbox"
version = "0.0.1"
authors = [
    "Martin Lindhe <martin@ubique.se>"
]
edition = "2018"
description = "PC x86 emulator with the goal of easily running MS-DOS games on Windows, macOS and Linux."
license = "MIT"
repository = "https://github.com/martinlindhe/dustbox-rs"
exclude = [
    "utils/*",
]

[badges]
travis-ci = { repository = "martinlindhe/dustbox-rs" }

[lib]
path = "src/lib.rs"
doctest = false

[dependencies]
bincode = "1.2"
chrono = "0.4"
image = { version = "0.23", default-features = false, features = [ "png" ] }
rand = "0.7"
rand_xorshift = "0.2"
sdl2 = { version = "0.34", default-features = false, features = [ "gfx" ] }
serde = "1.0"
serde_derive = "1.0"
tempfile = "3.1"
toml = "0.5"

[dev-dependencies]
criterion = "0.3"
pretty_assertions = "0.6"

[target.'cfg(windows)'.build-dependencies]
vcpkg = "0.2"

[[bench]]
name = "cpu"
harness = false
