[package]
name = "dustbox_frontend"
version = "0.1.0"
authors = ["Martin Lindhe"]

[[bin]]
name = "dustbox-frontend"
path = "src/frontend-main.rs"

[dependencies]
clap = "2.33"
dustbox = { path = "../dustbox" }
sdl2 = { version = "0.32", default-features = false, features = [ "gfx" ] }
image = { version = "0.22", default-features = false, features = [ "png" ] }
