[package]
name = "frontend"
version = "0.1.0"
authors = ["Martin Lindhe"]
edition = "2018"

[[bin]]
name = "dustbox-frontend"
path = "src/bin/frontend-main.rs"
test = false

[dependencies]
clap = "2.33"
dustbox = { path = "../dustbox" }
sdl2 = { version = "0.33", default-features = false, features = [ "gfx" ] }
image = { version = "0.22", default-features = false, features = [ "png" ] }
