[package]
name = "fuzzer"
version = "0.1.0"
authors = ["Martin Lindhe"]
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
clap = "2.33"
curl = { version = "0.4", default-features = false }
dustbox = { path = "../dustbox" }
rand = "0.7"
rand_xorshift = "0.2"
tempfile = "3.1"
tera = { version = "1.0", default-features = false }
