[package]
name = "fuzzer"
version = "0.1.0"
authors = ["Martin Lindhe"]
edition = "2018"

[lib]
path = "src/lib.rs"
test = false
doctest = false

[[bin]]
name = "dustbox-fuzzer"
path = "src/bin/fuzzer-main.rs"
test = false

[dependencies]
clap = "2.33"
colored = "2.0"
curl = { version = "0.4", default-features = false }
dustbox = { path = "../dustbox" }
rand = "0.8"
rand_xorshift = "0.3"
tempfile = "3.1"
tera = { version = "1.0", default-features = false }
