[package]
name = "harness"
version = "0.1.0"
authors = ["Martin Lindhe"]
edition = "2018"

[[bin]]
name = "dustbox-harness"
path = "src/bin/harness-main.rs"
test = false

[dependencies]
clap = "2.33"
colored = "2.0"
dustbox = { path = "../dustbox" }
tera = { version = "1.0", default-features = false }
image = { version = "0.23", features = [ "png" ] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
